2005-03-24  Chris Toshok  <toshok@ximian.com>

	* MonoDevelopDebugger.addin.xml: Change all the namespaces to
	MonoDevelop.Debugger.*

	* Gui/DebuggerVariablePad.cs
	(DebuggerVariablePad.GetDebuggerTypeProxyAttribute,
	DebuggerVariablePad.GetDebuggerDisplayAttribute): make use of
	DebugAttributeHandler.

	* Makefile.am (FILES): add DebugAttributeHandler.cs

	* DebuggerCommands.cs (DebugProject.Run): rescan debugger
	attributes when we start a debugging session.

	* DebugAttributeHandler.cs: new file, encapsulate all the debug
	attribute handling here (as much as is possible, anyway).

	* DebuggingService.cs: add attribute handler stuff, and change
	GetDebugProgressMonitor() to a property (DebugProgressMonitor).

	* *.cs, Gui/*.cs: change namespace to MonoDevelop.Debugger.*.
	
	* DebuggerASTVisitor.cs: wrap this file with #if NET_2_0.

2005-03-23  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerThreadPad.cs, Gui/DebuggerStackTracePad.cs,
	Gui/DebuggerLocalsPad.cs: Add Id and DefaultPlacement properties.

2005-03-15  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerVariablePad.cs: never commit code before trying to
	compile it.

2005-03-15  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (DLLS): add ICSharpCode.SharpRefactory.dll
	(FILES): remove CSharpTokenizer.cs, CSharpExpressionParser.cs, and
	MyTextReader.cs.  Add DebuggerASTVisitor.cs

	* Gui/DebuggerVariablePad.cs
	(DebuggerVariablePad.EvaluateDebuggerDisplay): use MD's AST stuff
	instead of mdb's parser c&p here.  
	
	* CSharpTokenizer.cs, CSharpExpressionParser.jay,
	CSharpExpressionParser.cs, MyTextReader.cs: nuke.
	
	* DebuggerASTVisitor.cs: new class used to convert from MD's AST
	to trees that the debugger can evaluate.
	
	* Expression.cs: add ConditionalExpression and BoolExpression.
	
2005-03-14  Lluis Sanchez Gual <lluis@novell.com>

	* MonoDevelopDebugger.addin.xml: Use the new syntax for defining pads.

2005-03-02  Chris Toshok  <toshok@ximian.com>
